--- a/Algorithm/Hash/CMakeLists.txt
+++ b/Algorithm/Hash/CMakeLists.txt
@@ -4,6 +4,6 @@
 cmake_minimum_required (VERSION 3.8)
 
 # 将源代码添加到此项目的可执行文件。
-add_executable (Hash "Hash.cpp" "Hash.h")
+add_library (Hash SHARED "Hash.cpp" "Hash.h")
 
 # TODO: 如有需要，请添加测试并安装目标。
