📝 Chore: CMake for RM stdc++

--- a/Math/CMakeLists.txt
+++ b/Math/CMakeLists.txt
@@ -4,6 +4,6 @@
 cmake_minimum_required (VERSION 3.8)
 
 # 将源代码添加到此项目的可执行文件。
-add_library (Math SHARED "Math.cpp" "Math.h" "stdc++.h")
+add_library (Math SHARED "Math.cpp" "Math.h" )
 
 # TODO: 如有需要，请添加测试并安装目标。
