--- a/Hash/CMakeLists.txt
+++ b/Hash/CMakeLists.txt
@@ -6,4 +6,6 @@ cmake_minimum_required (VERSION 3.8)
 # 将源代码添加到此项目的可执行文件。
 add_library (Hash SHARED "Hash.cpp" "Hash.h" )
 
+target_link_libraries(Hash "Math")
+
 # TODO: 如有需要，请添加测试并安装目标。
