--- a/Algorithm.Interop/Algorithm.Interop.csproj
+++ b/Algorithm.Interop/Algorithm.Interop.csproj
@@ -4,6 +4,24 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Authors>Dynesshely</Authors>
+    <Company>Catrol</Company>
+    <Description>An Interop Library for Algorithm</Description>
+    <Copyright>Copyright © Catrol 2022-present. All Rights Reserved.</Copyright>
+    <PackageProjectUrl>https://github.com/Catrol-org/Algorithm</PackageProjectUrl>
+    <PackageIcon>icon.png</PackageIcon>
+    <RepositoryUrl>https://github.com/Catrol-org/Algorithm</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <PackageLicenseExpression>AGPL-3.0-only</PackageLicenseExpression>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Update="icon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
