--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,6 @@ project ("Algorithm")
 add_subdirectory ("Base")
 add_subdirectory ("Hash")
 add_subdirectory ("Math")
+add_subdirectory ("Encode")
 
 add_subdirectory ("Test")
