--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,20 @@ jobs:
           cd "Algorithm.Interop"
           dotnet build -c Release
 
+      - name: Add to GitHub Repo
+        run: |
+          nuget sources add -name github -Source https://nuget.pkg.github.com/Crequency/index.json -Username Crequency -Password ${{ secrets.GitHubToken }}
+
+      - name: Install NuGet
+        uses: nuget/setup-nuget@v1
+        with:
+          nuget-version: '6.x'
+
+      - name: Publish Package to GitHub and NuGet
+        run: |
+          nuget push ./Algorithm.Interop/bin/Release/*.nupkg -Source https://api.nuget.org/v3/index.json -SkipDuplicate -ApiKey ${{ secrets.NugetKey }} -NoSymbol
+          nuget push ./Algorithm.Interop/bin/Release/*.nupkg -Source github -SkipDuplicate
+
   build-on-macos:
     runs-on: macos-latest
 
