--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@
 #
 cmake_minimum_required (VERSION 3.8)
 
-project ("Algorithm")
+project ("Common.Algorithm")
 
 # 包含子项目。
 add_subdirectory ("Base")
