--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Build Interop
         run: |
-          cd "Algorithm.Interop"
+          cd "Common.Algorithm.Interop"
           dotnet build -c Release
 
   build-on-ubuntu:
@@ -42,7 +42,7 @@ jobs:
 
       - name: Build Interop
         run: |
-          cd "Algorithm.Interop"
+          cd "Common.Algorithm.Interop"
           dotnet build -c Release
 
       - name: Add to GitHub Repo
@@ -56,8 +56,8 @@ jobs:
 
       - name: Publish Package to GitHub and NuGet
         run: |
-          nuget push ./Algorithm.Interop/bin/Release/*.nupkg -Source https://api.nuget.org/v3/index.json -SkipDuplicate -ApiKey ${{ secrets.NugetKey }} -NoSymbol
-          nuget push ./Algorithm.Interop/bin/Release/*.nupkg -Source github -SkipDuplicate
+          nuget push ./Common.Algorithm.Interop/bin/Release/*.nupkg -Source https://api.nuget.org/v3/index.json -SkipDuplicate -ApiKey ${{ secrets.NugetKey }} -NoSymbol
+          nuget push ./Common.Algorithm.Interop/bin/Release/*.nupkg -Source github -SkipDuplicate
 
   build-on-macos:
     runs-on: macos-latest
@@ -74,7 +74,7 @@ jobs:
 
       - name: Build Interop
         run: |
-          cd "Algorithm.Interop"
+          cd "Common.Algorithm.Interop"
           dotnet build -c Release
 
 
